Weird motionblur on curves in Eevee #97380

Closed
opened 2022-04-16 12:41:35 +02:00 by amit neole · 12 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2060

Blender Version
Blender version 3.1.2

Caused by 4e78a7360e
Prior to a6b7f32112 this just looked differently (cant tell what is right or wrong here)

Short description of error
When i render in 3.1.2, there is ugly rash on the left of the screen, which i have seen in alpha 3.2.0 alpha. Where as the render is excellent in 3.0.1

Exact steps for others to reproduce the error
Please render in evee in 3.0.1 - it will render the file correctly, where no rash is on render on bottom left of the screen. In 3.1.2 and 3.2.0 alpha renders are incorrect. Attaching the blend file.
Second Slide.blend

**System Information** Operating system: Windows 10 Graphics card: RTX 2060 **Blender Version** Blender version 3.1.2 Caused by 4e78a7360e Prior to a6b7f32112 this just looked differently (cant tell what is right or wrong here) **Short description of error** When i render in 3.1.2, there is ugly rash on the left of the screen, which i have seen in alpha 3.2.0 alpha. Where as the render is excellent in 3.0.1 **Exact steps for others to reproduce the error** Please render in evee in 3.0.1 - it will render the file correctly, where no rash is on render on bottom left of the screen. In 3.1.2 and 3.2.0 alpha renders are incorrect. Attaching the blend file. [Second Slide.blend](https://archive.blender.org/developer/F13003976/Second_Slide.blend)
Author

Added subscriber: @Neoamit

Added subscriber: @Neoamit
Author

Please render in evee in 3.0.1 - it will render the file correctly, where no rash is on render on bottom left of the screen. In 3.1.2 and 3.2.0 alpha renders are incorrect. Attaching the blend file{F13003976}

Please render in evee in 3.0.1 - it will render the file correctly, where no rash is on render on bottom left of the screen. In 3.1.2 and 3.2.0 alpha renders are incorrect. Attaching the blend file{[F13003976](https://archive.blender.org/developer/F13003976/Second_Slide.blend)}
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Just to make sure we are actually talking about the same thing:

  • please show this in pictures (screenshots)
  • I assume you mean the difference caused by Motion Blur?
  • (reg. Motion Blur, I am a bit surprised myself this changed from 3.0.1 to 3.1.2...)
Just to make sure we are actually talking about the same thing: - please show this in pictures (screenshots) - I assume you mean the difference caused by Motion Blur? - (reg. Motion Blur, I am a bit surprised myself this changed from 3.0.1 to 3.1.2...)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @fclem, @JacquesLucke

Added subscribers: @fclem, @JacquesLucke
Member

Traced this a bit and there is indeed something wrong with motionblur on hair curves in Eevee I think.

Caused by 4e78a7360e
Prior to a6b7f32112 this just looked differently (cant tell what is right or wrong here)

@JacquesLucke : mind checking?
CC @fclem

Traced this a bit and there is indeed something wrong with motionblur on hair curves in Eevee I think. Caused by 4e78a7360e Prior to a6b7f32112 this just looked differently (cant tell what is right or wrong here) @JacquesLucke : mind checking? CC @fclem
Philipp Oeser changed title from wrong render compared to 3.0.1 realease to Weird motionblur on curves in Eevee 2022-04-19 12:47:01 +02:00
Member

cant tell what is right or wrong here

I have the same problem here...

@Neoamit Can you simplify the file a bit (so that it contains fewer hair strands/objects) to make it more obvious what could be wrong?

> cant tell what is right or wrong here I have the same problem here... @Neoamit Can you simplify the file a bit (so that it contains fewer hair strands/objects) to make it more obvious what could be wrong?
Member

One thing the seems wrong (I think) is this orange bit:
image.png
But also just rendering that file in 2.93 (prior to all culprit commits) just renders MB differently.

One thing the seems wrong (I think) is this orange bit: ![image.png](https://archive.blender.org/developer/F13010508/image.png) But also just rendering that file in 2.93 (prior to all culprit commits) just renders MB differently.

This issue was referenced by f5077e057b

This issue was referenced by f5077e057b01e3c19dd9ba00e3acee8138569ac9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-05-12 12:46:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97380
No description provided.